fix margin values for card header on mobile

--- a/civictechprojects/static/css/partials/_ProjectCardContainer.scss
+++ b/civictechprojects/static/css/partials/_ProjectCardContainer.scss
@@ -2,7 +2,6 @@
   font-size: 18px;
   font-weight: bold;
   font-family: inherit;
-  margin-top: 15px;
-  margin-left: 15px;
+  margin: 15px 15px 0 15px;
   width: 100%;
 }
